--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,9 +38,7 @@ html, body {
     font-size: 14px;
 }
 .intro-wrapper {
-    padding-bottom: 50px;
     background-color: white;
-   
 }
 .intro-wrapper p {
     text-align: center;
@@ -50,6 +48,7 @@ html, body {
 }
 .intro-img {
     position: relative;
+    padding-bottom: 50px;
 }
 .click-img {
     padding-left: 50%;
@@ -409,10 +408,10 @@ span {
 #mask {
     background: rgba(0, 0, 0, 0.4);
     position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%; 
-    height: 111%;
+    width: 100%; /* 要素の横幅を画面全体に */
+	height: 100%; /* 要素の高さを画面全体に */
+	top: 0; /* 要素の固定位置をブラウザ最上部に合わせる */
+	left: 0; /* 要素の固定位置をブラウザ左側に合わせる */
 }
 #open {
     cursor: pointer;
