--- a/public/css/main.css
+++ b/public/css/main.css
@@ -405,6 +405,13 @@ span {
 .country-list {
     padding-top: 10px;
 }
+.scroll {
+    color: rgb(219, 214, 214);
+    opacity: 0.5;
+    font-size: 24px;
+    font-family: Oswald;
+    text-align: center;
+}
 #mask {
     background: rgba(0, 0, 0, 0.4);
     position: fixed;
@@ -426,7 +433,7 @@ span {
     padding: 20px;
     border-radius: 10px;
     position: absolute;
-    top: 35%;
+    top: 20%;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -452,6 +459,7 @@ span {
 i:hover {
     color: gray;
 }
+
 
 @media screen and (max-width: 1026px) {
     .logo-wrapper {
@@ -592,7 +600,7 @@ i:hover {
     }
     #modal {
         max-width: 340px;
-        top: 25%;
+        top: 5%;
         font-size: 9px;
         line-height: 20px;
     }
