--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,53 +66,21 @@ html, body {
     text-align: center;
     padding: 30px;
 }
-.box {
-    display: flex;
-    align-items: center;
+.demo-wrapper {
+    background-color: #003a8e;
+    padding-bottom: 30px;
 }
-.instruction-row {
-    width: 50%;
-    box-sizing: border-box;
-    padding: 10px;
+.demo-wrapper p {
+    color: white;
+    font-size: 16px;
+    text-align: center;
 }
-.instruction-row img {
-    width: 100%;
-    box-shadow : 15px 15px 37px gray;
-}
-.panel {
-    position: relative;
-}
-.panel-in {
-    padding: 15px 15px;
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.panel-main {
-    padding: 20px;
-    z-index: 30;
-    position: relative;
-    margin-bottom: 0;
-    border: solid 1px rgba(255,255,255,0.4);
-    background: rgba(255,255,255,0.6);
-}
-.instruction-wrapper {
-    line-height: 25px;
-    background-image: url("../images/bremen.jpg");
-    background-size: 100%;
-}
-.row-text {
-    font-size: 30px;
+.demo-header {
     font-family: Oswald;
-    padding-bottom: 14px;
-}
-.row-text p {
-    padding-top: 10px;
-    font-size: 14px;
-}
-.header-sub {
-    font-size: 18px;
-    padding-top: 10px;
+    font-size: 40px;
+    text-align: center;
+    padding: 30px;
+    color: white;
 }
 .page-wrapper {
     padding-top: 20px;
@@ -128,19 +96,6 @@ html, body {
 .comment-header {
     font-weight: bold;
 }
-.gmap {
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    position: relative;
-    }
-    .gmap iframe {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-}  
 .avbarDropdown {
     font-family: Oswald;
 }
@@ -218,13 +173,41 @@ footer a:hover {
     flex-wrap: wrap;
     justify-content: center;
 }
-.cards img {
+.top-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px 0px;
+}
+.more {
+    font-size: 24px;
+    font-family: Oswald;
+    padding: 20px;
+    text-align: center;
+    padding: 30px;
+}
+.more a {
+    color: rgb(219, 214, 214);
+    opacity: 0.8;
+}
+.more a:hover {
+    color:#003a8e;
+    text-decoration: none;
+}
+.user-cards img {
     max-width: 100%;
     display: inline-block;
     height: 220px;
     box-shadow: 0 5px 5px gray;
 }
-.user-cards img {
+.travel-card img {
+    max-width: 100%;
+    display: inline-block;
+    height: 220px;
+    box-shadow: 0 5px 5px gray;
+}
+.trouble-card img {
     max-width: 100%;
     display: inline-block;
     height: 220px;
@@ -415,10 +398,10 @@ span {
 #mask {
     background: rgba(0, 0, 0, 0.4);
     position: fixed;
-    width: 100%; /* 要素の横幅を画面全体に */
-	height: 100%; /* 要素の高さを画面全体に */
-	top: 0; /* 要素の固定位置をブラウザ最上部に合わせる */
-	left: 0; /* 要素の固定位置をブラウザ左側に合わせる */
+    width: 100%; 
+	height: 100%; 
+	top: 0; 
+	left: 0;
 }
 #open {
     cursor: pointer;
@@ -464,10 +447,6 @@ i:hover {
 @media screen and (max-width: 1026px) {
     .logo-wrapper {
         padding:15% 10%;
-    }
-    .instruction-row {
-        width: 100%;
-        box-sizing: border-box;
     }
     footer {
         padding-bottom: 20px;
@@ -534,16 +513,6 @@ i:hover {
         text-align: center;
         padding-top: 40px;
     }
-    .row-text {
-        font-size: 20px;
-        padding-bottom: 0px;
-    }
-    .header-sub {
-        font-size: 15px;
-    }
-    .row-text p {
-        font-size: 12px;
-    }
     .intro {
         font-size: 12px;
         text-align: center;
@@ -552,27 +521,6 @@ i:hover {
     }
     .intro-text {
         font-size: 14px;
-    }
-    .box {
-        flex-direction: column;
-    }
-    .order1 {
-        order: 1;
-    }
-    .order2 {
-        order: 2;
-    }
-    .order3 {
-        order: 3;
-    }
-    .order4 {
-        order: 4;
-    }
-    .order5 {
-        order: 5;
-    }
-    .order6 {
-        order: 6;
     }
     .footer-title {
         padding-top: 20px;
