--- a/public/css/main.css
+++ b/public/css/main.css
@@ -522,6 +522,9 @@ i:hover {
     .intro-text {
         font-size: 14px;
     }
+    .demo-header {
+        font-size: 24px;
+    }
     .footer-title {
         padding-top: 20px;
         padding-bottom: 20px;
