はみ出し修正

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -270,12 +270,18 @@ footer a:hover {
    padding-left: 15px;
    padding-right: 15px;
    margin: 0;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
 }
 
 .trouble-card p {
    padding-left: 15px;
    padding-right: 15px;
    margin: 0;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
 }
 
 .card-user {
