--- a/public/css/main.css
+++ b/public/css/main.css
@@ -646,7 +646,7 @@ ul {
         padding: 10px 5px;
     }
 
-    .register-wrapper btn-btn-primary {
+    .register-wrapper btn-btn-outline-primary {
         margin: 0 auto;
     }
 
