index width vhanged

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -452,6 +452,14 @@ span {
     margin-left: auto;
 }
 
+.index-container {
+    max-width: 1500px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .user-date {
     font-size: 9px;
 }
