--- a/public/css/main.css
+++ b/public/css/main.css
@@ -444,6 +444,14 @@ span {
     color: black;
 }
 
+.user-container {
+    max-width: 1400px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .user-date {
     font-size: 9px;
 }
