--- a/public/css/main.css
+++ b/public/css/main.css
@@ -535,8 +535,37 @@ i:hover {
 ul {
     list-style: none;
 }
+
 span {
     display: inline-block;
+}
+
+.number-box {
+    background-color: white;
+    box-shadow: 0 5px 5px gray;
+    transition: box-shadow .5s;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    margin: 10px;
+    display: inline-block;
+}
+
+.country-number {
+    font-size: 48px;
+    text-align: center;
+    font-family: Oswald;
+    line-height: 70px;
+}
+
+.number-box p {
+    font-size: 14px;
+    text-align: center;
+    font-family: Oswald;
+}
+
+.number-box:hover {
+    box-shadow : 5px 5px 20px gray;
 }
 
 @media screen and (max-width: 1026px) {
@@ -683,5 +712,8 @@ span {
     }
     span {
         display: inline-block;
+    }
+    .number-boxes {
+        text-align: center;
     }
 }
