--- a/public/css/main.css
+++ b/public/css/main.css
@@ -628,15 +628,19 @@ dl > div.appear dt::after {
 table {
     counter-reset: rowCount;
     font-size: 13px;
-  }
+}
 
-  table > tbody > tr {
-    counter-increment: rowCount;
-  }
+table > tbody > tr {
+counter-increment: rowCount;
+}
 
-  table > tbody > tr > td:first-child::before {
-    content: counter(rowCount);
-  }
+table > tbody > tr > td:first-child::before {
+content: counter(rowCount);
+}
+
+small a {
+    color: black;
+}
 
 @keyframes fadeIn {
     0% {
