--- a/public/css/main.css
+++ b/public/css/main.css
@@ -206,6 +206,10 @@ footer a:hover {
     display: inline-block;
 }
 
+.travel-card a {
+    color: black;
+}
+
 .travel-card:hover, .question-card:hover, .number-box:hover, .faq:hover, .country-card:hover {
     box-shadow : 5px 5px 20px gray;
 }
